syntax = "proto3";

package user;

option go_package = "github.com/AndroSaal/RecommendationsForUsers/app/services/analytics/doc/myproto";

message UserUpdate {
    int64 userId = 1;
    repeated string userInterests = 2;
}

message ProductAction {
    int64 productId = 1;
    string action = 3;
    repeated string productKeyWords = 2;
}